# first-haskell-cabal-init

./: CHANGELOG.md  LICENSE  README.md  first-haskell-cabal-init.cabal
lib/first/second/: third.hs
