cabal-version:       >=1.10
-- Initial package description 'first-haskell-cabal-init.cabal' generated
-- by 'cabal init'.  For further documentation, see
-- http://haskell.org/cabal/users-guide/

name:                first-haskell-cabal-init
version:             0.1.0.0
synopsis:            Basic inital cabal init
-- description:
-- bug-reports:
license:             MIT
license-file:        LICENSE
author:              Mladen
maintainer:          none
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md, README.md

library
  hs-source-dirs:      lib
  exposed-modules:     First.Second.Third
  build-depends:       base >=4.12 && <4.13
  default-language:    Haskell2010

executable first-haskell-cabal-init
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.12 && <4.13
  hs-source-dirs:      src
  default-language:    Haskell2010
